# BarelyBrowseWorking

./: .replit  HOW_TO_USE.md  README.md  chatgpt-browser.spec  main.py  pyproject.toml  replit.md
.github/workflows/: build-windows.yml
.local/share/ChatGPT Browser/: sessions.json
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-this-currently-is-a-working-version-of-the-app-but-i-want-to-install-it-directly-into-windows-and-1757780819341_1757780819342.txt
src/: __init__.py  app.py  config.py  paths.py
src/storage/: session_manager.py
src/ui/: animated_widgets.py  main_window.py  memory_manager.py  notepad.py  notifications.py  security_dialog.py
src/web/: __init__.py  oauth_handler.py  security_interceptor.py  url_filter.py  workspace.py
